Fix ImageThumbnailCreatorTest to use Paths.get() instead of Path.of() for better compatibility