@@ -22,7 +22,7 @@ import org.junit.runners.Parameterized;
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.Collection;
 import app.notesr.core.util.FilesUtils;
@@ -64,7 +64,7 @@ public class ImageThumbnailCreatorTest extends ThumbnailCreatorTestBase {
 
         byte[] thumbnailBytes = thumbnailCreator.getThumbnail(Uri.fromFile(imageFile));
 
-        Files.write(Path.of(thumbnailFile.getAbsolutePath()), thumbnailBytes);
+        Files.write(Paths.get(thumbnailFile.getAbsolutePath()), thumbnailBytes);
 
         Size imageSize = getImageSize(imageFile);
         Size thumbnailSize = getImageSize(thumbnailFile);
